# python-database

./: .pre-commit-config.yaml  LICENSE  pyproject.toml
db/: main.py
