[tool.poetry]
name = "python-database"
version = "0.1.0"
description = ""
authors = ["chawanghyeon <chawanghyeon@gmail.com>"]
readme = "README.md"
packages = [{include = "python_database"}]

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
